# antlr4_mysql_parser

./: CMakeLists.txt  README.md  build.sh  main.cpp  run.sh
grammar/: CMakeLists.txt
grammar/grammar/: MySQLBaseLexer.h  MySQLBaseParser.h  MySQLLexer.g4  SqlMode.h
runtime/: CMakeLists.txt
runtime/src/: .Parser.h.swp
